--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,27 @@
         android:layout_height="match_parent"
         tools:context=".activities.MainActivity">
 
-    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
-                                                android:layout_height="50dp"
-                                                android:layout_marginTop="8dp"
-                                                app:layout_constraintTop_toTopOf="parent"
-                                                app:layout_constraintStart_toStartOf="parent"
-                                                android:layout_marginStart="8dp"
-                                                app:layout_constraintEnd_toEndOf="parent"
-                                                android:layout_marginEnd="8dp"></android.support.design.widget.AppBarLayout>
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="0dp">
 
+    </android.support.design.widget.AppBarLayout>
+    <FrameLayout android:id="@+id/fragment_container"
+            android:layout_width="0dp" android:layout_height="0dp"
+                 app:layout_constraintBottom_toTopOf="@+id/nav_view"
+                 app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+   />
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/nav_view"
+            android:elevation="4dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
