--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -24,6 +24,7 @@
                                                 android:elevation="6dp">
                 <LinearLayout android:layout_width="match_parent" android:layout_height="48dp">
                     <ImageView android:layout_width="24dp" android:layout_height="24dp"
+                               android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_search"/>
                     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                               android:layout_gravity="center_vertical"
@@ -32,10 +33,13 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/exp_recyclerview"
+            android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
 
