--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,7 +5,9 @@
              android:layout_height="match_parent"
              tools:context=".HistoryFragment">
 
-   <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+   <android.support.v7.widget.RecyclerView
+           android:id="@+id/hist_recyclerview"
+           android:layout_width="match_parent"
                                            android:layout_height="match_parent"/>
 
 </FrameLayout>
